# instacam

./: .gitignore  .tool-versions  Cargo.toml  Procfile  README.md  build.rs  config.json  package-lock.json  package.json
daemon/: Cargo.toml
daemon/src/: app.rs  args.rs  canvas.rs  lib.rs  main.rs  opts.rs  pipeline.rs  server.rs  types.rs  video_processor.rs
daemon/src/app/: mod.rs  settings.rs
daemon/src/av/: encoder_ctx.rs  utils.rs
daemon/src/filters/: bgsub.rs  blur.rs  edges.rs  mod.rs  pixelate.rs  sepia.rs  sharpen.rs
daemon/tools/: list.sh  test.sh
src/: args.rs  canvas.rs  filter.rs  main.rs  opts.rs  pipeline.rs  types.rs  video_processor.rs
src/app/: mod.rs  settings.rs
src/av/: debug.rs  decoder_ctx.rs  encoder_ctx.rs  mod.rs  output_ctx.rs  utils.rs
src/canvas/: mod.rs
src/cmds/: codecs.rs  formats.rs  forward.rs  mod.rs  photos.rs  record.rs  show.rs  ui.rs
src/filters/: bgsub.rs  bgsub2.rs  blur.rs  denoise.rs  edges.rs  mod.rs  preview.rs  sharpen.rs  utils.rs
tools/: bg.sh  hue.sh  test.sh
tools/c_examples/: capture_cam.c  filter_video.c
ui/: .prettierrc  config-overrides.js  craco.config.js  package-lock.json  package.json
ui/src/: App.tsx  style.css
ui/src/components/settings/: index.tsx  style.css
ui/src/components/video/: index.tsx  style.css
ui/src/pages/filters/: index.tsx
ui/src/pages/settings/: index.tsx
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
