[package]
name = "instacam"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
ffmpeg4-ffi = "0.3.8"
clap = "3.0.0-beta.1"
sdl2 = "0.34"
iui = "0.3"
crossbeam-channel = "0.4"
opencv = {version = "0.43", features = ["clang-runtime", "buildtime-bindgen"]}
