[package]
name = "instacam"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
ffmpeg4-ffi = "0.3.8"
clap = "3.0.0-beta.1"
crossbeam-channel = "0.4"
opencv = {version = "0.43", features = ["clang-runtime", "buildtime-bindgen"]}
serde_json = "1.0"
serde_derive = "1.0.114"
serde = { version = "1.0.114", features = ["derive"] }
