[package]
name = "instacam"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[dependencies]
ffmpeg4-ffi = { path = "../../contrib/ffmpeg4-ffi-rust" }
crossbeam-channel = "0.4"
opencv = {version = "0.52", features = ["clang-runtime", "buildtime-bindgen"]}
serde_json = "1.0"
serde_derive = "1.0.114"
serde = { version = "1.0.114", features = ["derive"] }
sdl2 = "0.34.3"
