[package]
name = "instacam-wasm"
description = "WASM component of Instacam"
repository = "https://github.com/naps62/instacam"
license = "MIT"
version = "0.1.0"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window'
]

[profile.release]
opt-level = "s"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
